--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^19.1.6",
     "@types/web3": "^1.0.20",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.10.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
