--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,25 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "assert": "^2.1.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "https-browserify": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "multer": "^2.0.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "pg": "^8.16.3",
+    "querystring-es3": "^0.2.1",
+    "request": "^2.88.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
