--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,11 @@
     "@types/web3": "^1.0.20",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
+    "multer": "^2.0.1",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5",
